# floatcsep

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  Example_Markdown.md  GEFE_Markdown.md  MANIFEST.in  Makefile  README.md  deco.py  environment.yml  explore.py  get_models_from_git.sh  import_models  import_models.sh  mdutils_test.py  pyproject.toml  requirements.txt  requirements_dev.txt  run_experiment.py  setup.cfg  setup.py  tox.ini
.github/workflows/: build-sphinx.yml  build-test.yml  publish-pypi.yml  release-tutorials.yml
artifacts/efehr13/: config.yml  models.yml  tests.yml
artifacts/efehr20/: config.yml  models.yml  tests.yml
artifacts/gear/: config.yml  models.yml  tests.yml
artifacts/gefe/: config.yml  models.yml  tests.yml
artifacts/gefe_grid/: config.yml  models.yml
artifacts/gefe_qtree/: config.yml  tests.yml
artifacts/italy/: config.yml  models.yml  tests.yml
artifacts/nz/: config.yml  models.yml  tests.yml
code/: accessors.py  config.py  evaluations.py  main.py  main_quadtree.py  report.py  tests.py  utils.py
code/global_quadtree_forecasts/: GEAR1=N100L11.csv  GEAR1=N25L11.csv  GEAR1=N50L11.csv  GEAR1=SN100L11.csv  GEAR1=SN25L11.csv  GEAR1=SN50L11.csv  KJSS=N100L11.csv  KJSS=N25L11.csv  KJSS=N50L11.csv  KJSS=SN100L11.csv  KJSS=SN25L11.csv  KJSS=SN50L11.csv  SHIFT2F_GSRM=N100L11.csv  SHIFT2F_GSRM=N25L11.csv  SHIFT2F_GSRM=N50L11.csv  SHIFT2F_GSRM=SN100L11.csv  SHIFT2F_GSRM=SN25L11.csv  SHIFT2F_GSRM=SN50L11.csv  TEAM=N100L11.csv  TEAM=N25L11.csv  TEAM=N50L11.csv  TEAM=SN100L11.csv  TEAM=SN25L11.csv  TEAM=SN50L11.csv  WHEEL=N100L11.csv  WHEEL=N25L11.csv  WHEEL=N50L11.csv  WHEEL=SN100L11.csv  WHEEL=SN25L11.csv  WHEEL=SN50L11.csv
docs/: Makefile  conf.py  index.rst
docs/_static/: custom.js
docs/deployment/: intro.rst
docs/examples/: case_a.rst  case_b.rst  case_c.rst  case_d.rst  case_e.rst  case_f.rst  case_g.rst  case_h.rst
docs/guide/: config.rst  evaluation_config.rst  executing_experiment.rst  experiment_config.rst  model_config.rst  postprocess_config.rst  region_config.rst  reproduce_experiment.rst  run_experiment.rst  tests_config.rst  time_config.rst
docs/intro/: concepts.rst  floating_experiments.rst  forecasting_experiments.rst  installation.rst
docs/reference/: api_reference.rst  commands.rst  evaluation.rst  experiment.rst  infrastructure.rst  model.rst  postprocess.rst  utilities.rst
docs/source/: conf.py  index.rst
docs/tutorials/: case_a.rst  case_b.rst  case_c.rst  case_d.rst  case_e.rst  case_f.rst  case_g.rst  case_h.rst
examples/case_a/: README.md  case_a.py  catalog.csep  config.yml  models.yml  run.py  tests.yml
examples/case_b/: config.yml  make.py  models.yml  run.py  tests.yml
examples/case_c/: case_c.py  config.yml  run.py  tests.yml
examples/case_d/: config.yml  tests.yml
examples/case_e/: catalog.json  config.yml  models.yml  run.py  tests.yml
examples/case_f/: catalog.json  config.yml  make_exp.py  models.yml  test_catalog.csv  tests.yml
examples/case_f/pymock/: Dockerfile  README.md  requirements.txt  run.py  setup.cfg
examples/case_f/pymock/forecasts/: pymock_2020-01-01_2020-01-29.csv
examples/case_f/pymock/input/: args.txt  catalog.csv
examples/case_f/pymock/pymock/: libs.py  main.py
examples/case_g/: config.yml  custom_plot_script.py  models.yml  plot_script.py  tests.yml
examples/case_h/: config.yml  custom_report.py  models.yml  tests.yml
experiment/: config.yml  models.yml  run.py  tests.yml
explore/: asd  catalog.json  config.yml  config_out.yaml  explore.py  models.yml  tests.yml
explore/models/: gulia-wiemer.ALM.italy.10yr.2010-01-01.hdf5  meletti.MPS04.italy.10yr.2010-01-01.hdf5  zechar.TripleS-CPTI.italy.10yr.2010-01-01.hdf5
fecsep/: accessors.py  config.py  core.py  dbparser.py  evaluation.py  evaluations.py  experiment.py  extras.py  main.py  model.py  models.py  readers.py  registry.py  report.py  serialize.py  test.py  tests.py  utils.py
fecsep.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
fecsep/artifacts/: europe_efehr20.csv  patterns.py
fecsep/cmd/: main.py
floatcsep/: __init__.py  accessors.py  environments.py  evaluation.py  experiment.py  extras.py  logger.py  model.py  postprocess.py  readers.py  registry.py  report.py  repository.py  utils.py
floatcsep/artifacts/: new_zealand_csep_testing.csv
floatcsep/cmd/: main.py
floatcsep/commands/: main.py
floatcsep/infrastructure/: engine.py  environments.py  logger.py  registries.py  repositories.py
floatcsep/postprocess/: plot_handler.py  reporting.py
floatcsep/utils/: accessors.py  helpers.py  readers.py
gefe/: GEFE_Markdown.md  accessors.py  config.py  evaluations.py  main.py  models.py  report.py  tests.py  utils.py
models/: GEAR1=N25L11.csv  GEAR1=SN25L11.csv  GEAR1=SN50L11.csv  KJSS=SN100L11.csv  KJSS=SN25L11.csv  KJSS=SN50L11.csv  SHIFT2F_GSRM=N25L11.csv  SHIFT2F_GSRM=N50L11.csv  SHIFT2F_GSRM=SN100L11.csv  SHIFT2F_GSRM=SN25L11.csv  SHIFT2F_GSRM=SN50L11.csv  TEAM=SN25L11.csv  WHEEL=N50L11.csv  WHEEL=SN100L11.csv  WHEEL=SN25L11.csv
tests/: test_accessors.py  test_experiment.py  test_isc_gcmt.py  test_model.py  test_zenodo.py
tests/artifacts/: catalog.json
tests/e2e/: test_data.py
tests/integration/: experiment typologies  test_data.py  test_model_accessors.py  test_model_docker.py  test_model_infrastructure.py  test_model_interface.py
tests/qa/: test_data.py
tests/unit/: test_accessors.py  test_commands.py  test_data.py  test_engine.py  test_environments.py  test_evaluation.py  test_experiment.py  test_model.py  test_parsers.py  test_plot_handler.py  test_readers.py  test_registry.py  test_reporting.py  test_repositories.py  test_utils.py
tutorials/case_a/: case_a.py  config.yml  region.txt
tutorials/case_b/: case_b.py  catalog.json  tests.yml
tutorials/case_c/: case_c.py
tutorials/case_d/: models.yml  tests.yml
tutorials/case_e/: case_e.py  config.yml  models.yml  tests.yml
tutorials/case_f/: catalog.json  config.yml  models.yml  tests.yml
tutorials/case_g/: models.yml  tests.yml
(+82 files in other folders)
