[metadata]
name = floatcsep
description = CSEP Floating Experiment deployment
author = Pablo Iturrieta
author_email = pciturri@gfz-potsdam.de
license = LICENSE
version = 0.1.1
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
url = git@git.gfz-potsdam.de:csep-group/floatcsep.git

[options]
packages =
    floatcsep
    floatcsep.cmd
install_requires =
    numpy==1.23.4
    cartopy
    dateparser
    docker
    flake8
    geos
    gitpython
    h5py
    matplotlib
    mercantile
    obspy
    pandas
    pillow
    pycsep
    pyproj
    pyshp
    pyyaml
    requests
    scipy
    seaborn
    shapely
    tables
    xmltodict
python_requires = >=3.7
zip_safe = no

[options.packages.find]
include = floatcsep*

[options.extras_require]
dev =
    numpy==1.23.4
    cartopy
    dateparser
    docker
    flake8
    geos
    gitpython
    h5py
    matplotlib
    mercantile
    mypy
    obspy
    pandas
    pillow
    pycsep
    pyproj
    pyshp
    pytest-cov
    pytest
    pyyaml
    requests
    scipy
    seaborn
    shapely
    sphinx
    sphinx-autoapi
    sphinx-gallery
    sphinx-rtd-theme
    tables
    tox
    vcrpy
    xmltodict

[options.entry_points]
console_scripts =
    floatcsep = floatcsep.cmd.main:floatcsep

[flake8]
max-line-length = 79