[metadata]
name = floatcsep
description = CSEP Floating Experiment application
long_description = file: README.md
long_description_content_type = text/markdown
author = Pablo Iturrieta
author_email = pciturri@gfz-potsdam.de
license = BSD 3-Clause License
version = 0.1.4
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
url = https://github.com/cseptesting/floatcsep.git

[options]
packages =
    floatcsep
    floatcsep.cmd
install_requires =
    numpy
    dateparser
    docker
    flake8
    gitpython
    h5py
    matplotlib
    pycsep
    pyshp
    pyyaml
    requests
    seaborn
    tables
    xmltodict
python_requires = >=3.9
zip_safe = no

[options.packages.find]
include = floatcsep*

[options.extras_require]
dev =
    numpy
    cartopy
    dateparser
    docker
    flake8
    geos
    gitpython
    h5py
    matplotlib
    mercantile
    mypy
    obspy
    pandas
    pillow
    pyblack
    pycsep
    pydocstringformatter
    pyproj
    pyshp
    pytest
    pytest-cov
    pytest-asyncio
    pyyaml
    requests
    scipy
    seaborn
    shapely
    sphinx
    sphinx-autoapi
    sphinx-gallery
    sphinx-rtd-theme
    tables
    tox
    vcrpy==4.3.1
    xmltodict

[options.entry_points]
console_scripts =
    floatcsep = floatcsep.cmd.main:floatcsep

[flake8]
max-line-length = 96