[metadata]
name = pymock
description = Time-dependend mock-up model
author = Pablo Iturrieta
author_email = pciturri@gfz-potsdam.de
license = LICENSE
version = 0.1.0
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
url = https://git.gfz-potsdam.de/csep/it_experiment/models/pymock

[options]
packages =
    pymock
install_requires =
    numpy
    matplotlib
python_requires = >=3.7
zip_safe = no

[options.entry_points]
console_scripts =
    pymock = pymock.main:run

[flake8]
max-line-length = 79